# todo

./: .dockerignore  .env.example  CHANGELOG.md  Containerfile.ubi  Dockerfile  README.md  docker-compose.ubi.yml  docker-compose.yml  flake.nix  todo.xml  unraid-template.xml
.github/workflows/: ci.yml  docker-publish.yml
backend/: Cargo.toml
backend/debian/: changelog  postinst  postrm  prerm
backend/src/: auth.rs  config.rs  cookie_auth.rs  handlers.rs  main.rs  middleware.rs  state.rs  static_files.rs  tests.rs
backend/src/handlers/: config.rs  mod.rs  todos.rs
backend/src/middleware/: auth.rs  custom.rs  mod.rs
backend/src/routes/: auth.rs  todos.rs
backend/src/routes/auth/: verify_pin.rs
backend/src/tests/: domain.rs  routes.rs
backend/tests/: container_smoke.rs
frontend/: Cargo.toml  index.html
frontend/Assets/shared-assets/: CHANGELOG.md
frontend/Assets/shared-assets/shared-rust/shared-backend/: Cargo.toml
frontend/Assets/shared-assets/shared-rust/shared-core/: Cargo.toml
frontend/Assets/shared-assets/shared-rust/shared-frontend/: Cargo.toml
frontend/Assets/shared-assets/shared-rust/shared-frontend/src/components/: footer.rs  header.rs
frontend/src/: api.rs  app.rs  app_helpers.rs  header.rs  i18n.rs  login.rs  main.rs  storage.rs  theme.rs  todo_form.rs
frontend/src/app/: view.rs
frontend/src/components/: pin.rs  todo_item.rs  todo_list.rs  todo_list_handlers.rs
frontend/src/i18n/: de.rs  en.rs  es.rs  fr.rs  ja.rs  pt.rs  ru.rs  zh.rs
shared/: Cargo.toml
