[package]
name = "frontend"
version = "1.2.0"
edition = "2021"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/UberMetroid/RustDo"
homepage = "https://github.com/UberMetroid/RustDo"
description = "Yew frontend application for RustDo."
readme = "../README.md"

[dependencies]
shared = { path = "../shared" }
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlFormElement",
    "MediaQueryList",
    "Window",
    "Document",
    "Storage",
    "Element",
    "DomRect",
    "DragEvent",
    "MouseEvent",
    "KeyboardEvent"
] }
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.5"
gloo-timers = "0.3"
gloo-storage = "0.3"
